--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,34 @@
-# Compiled class file
-*.class
+#Allure
+.allure
+/*/allure-results/
 
-# Log file
-*.log
+#Maven
+target
 
-# BlueJ files
-*.ctxt
+#Gradle
+.gradle
+build
+.gradletasknamecache
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+#IDEA
+.idea/*
+*.iml
+*.ipr
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+#Eclipse
+*.settings
+*.classpath
+*.project
+*.pydevproject
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+#Netbeans
+**/nbproject/private/
+**/nbproject/Makefile-*.mk
+**/nbproject/Package-*.bash
+nbbuild/
+dist/
+nbdist/
+.nb-gradle/
+
+#Mac OS
+.DS_Store
